# genro-core

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_bridge_transaction.py  test_environment.py  test_integration.py  test_transaction_decorator.py
api/: ARCHITECTURE.md
genro_core/: __init__.py  introspection.py  utils.py
genro_core/cli/: __init__.py  main.py
genro_core/decorators/: __init__.py  api.py
genro_core/enablers/: __init__.py  api_publisher_enabler.py
genro_core/micro_app/: __init__.py  application.py
genro_core/micro_db/: __init__.py  column.py  compiler.py  database.py  table.py  trigger_stack.py
genro_core/micro_db/adapters/: __init__.py  base.py  postgres.py  sqlite.py
gtext_src/: architecture.md.gtext  overview.md.gtext  subproject_hdr.md
tests/: __init__.py  test_apiready.py  test_introspection.py
